Fixed issue with [role="main"] on smaller screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -392,7 +392,7 @@ img {
         float: none;
     }
     
-    [role="main"],
+    .has-sidebar [role="main"],
     [role="complementary"] {
         width: auto;
         float: none;
